--- a/pmsb_web/questionarios/templates/questionarios/includes/pergunta/tipo.html
+++ b/pmsb_web/questionarios/templates/questionarios/includes/pergunta/tipo.html
@@ -1,5 +1,4 @@
-<b>Pergunta Tipo:</b> {{ pergunta.verbose_name_tipo }}
-
+<b>Pergunta Tipo:</b> {{pergunta.verbose_name_tipo}}
 {% if pergunta.tipo == 0 %}
-    {{ pergunta.perguntaescolha.multipla_verbose }}
+- {{pergunta.perguntaescolha.multipla_verbose}}
 {% endif %}
