--- a/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
+++ b/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
@@ -5,18 +5,22 @@
 {% for resposta in object_list %}
 <div class="row">
     <div class="col-lg-12">
-    <h5><b>Questionario: </b> {{resposta.questionario}}</h5>
-    <h5><b>Questionario de: </b> {{resposta.questionario.usuario}}</h5>
-    <h5><b>Area: </b> {{resposta.setor_censitario}}</h5>
-    <h5><b>Resposta de: </b> {{resposta.usuario}}</h5>
-    <a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_detail' resposta.pk %}">ver resposta</a>
+        <p><b>Questionario: </b> {{resposta.questionario}}</p>
+        <p><b>Proposto por: </b> {{resposta.questionario.usuario}}</p>
+        <p><b>Aplicado na Área: </b> {{resposta.setor_censitario}}</p>
+        <p><b>Respondido por: </b> {{resposta.usuario}}</p>
+        <p>
+            {% include 'core/includes/timed.html' with timed_object=resposta %}
+        </p>
+        <a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_detail' resposta.pk %}">ver
+            resposta</a>
     </div>
 </div>
 {% empty %}
 
 <div class="row">
     <div class="col-lg-12">
-    Sem respostas!
+        Sem respostas!
     </div>
 </div>
 
