Remove espaço entre linha e muda de Grupo para Eixo https://github.com/catalunha/pmsbweb1/issues/53 https://github.com/catalunha/pmsbweb1/issues/49

--- a/pmsb_web/core/templates/core/includes/timed.html
+++ b/pmsb_web/core/templates/core/includes/timed.html
@@ -1,2 +1,2 @@
-<p><b>Criado: </b>{{timed_object.criado_em}}</p>
-<p><b>Editado: </b>{{timed_object.editado_em}}</p>
+<div><b>Criado: </b>{{timed_object.criado_em}}</div>
+<div><b>Editado: </b>{{timed_object.editado_em}}</div>
