--- a/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
@@ -6,8 +6,11 @@
     <hr>
     <p>
         <a class="btn btn-primary" href="{% url 'relatorios:list_figura' object.pk %}">
-            <i aria-hidden="true" data-hidden="true" class="nav-icon fa fa-image" style="color:white;"></i>Gerenciar
-            Figuras</a>
+            <i aria-hidden="true" data-hidden="true" class="nav-icon fa fa-image" style="color:white;"></i>Inserir
+            Figura</a>
+        <a class="btn btn-primary" href="{% url 'relatorios:pdf_list' object.pk %}">
+            <i aria-hidden="true" data-hidden="true" class="nav-icon fa fa-file-word-o" style="color:white;"></i>Inserir
+            PDF</a>
         {% if object.templatelatexrelatorio %}
             <a class="btn btn-primary" href="{% url 'relatorios:render_pdf' object.pk %}">
                 <i aria-hidden="true" data-hidden="true" class="nav-icon fa fa-file-text-o" style="color:white;"></i>Visualizar
