Troca eixo por área https://github.com/catalunha/pmsbweb1/issues/49

--- a/pmsb_web/questionarios/templates/questionarios/respostaquestionario_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/respostaquestionario_detail.html
@@ -6,7 +6,7 @@
         <div><a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_list'%}">Voltar</a></div>
 
         <div><b>Grupo: </b> {{object.questionario.grupo}}</div>
-        <div><b>Eixo: </b> {{object.setor_censitario}}</div>
+        <div><b>Área: </b> {{object.setor_censitario}}</div>
         <div><b>Questionario: </b> {{object.questionario}}</div>
         <div><b>Usuario: </b> {{object.usuario}}</div>
 
