--- a/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
+++ b/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
@@ -1,30 +1,59 @@
 {% extends "questionarios/base.html" %}
 
 {% block conteudo %}
-
-{% for resposta in object_list %}
-<div class="row">
-    <div class="col-lg-12">
-        <div><b>Questionario: </b> {{resposta.questionario}}</div>
-        <div><b>Proposto por: </b> {{resposta.questionario.usuario}}</div>
-        <div><b>Aplicado no Área: </b> {{resposta.setor_censitario}}</div>
-        <div><b>Respondido por: </b> {{resposta.usuario}}</div>
-        <div>
-            {% include 'core/includes/timed.html' with timed_object=resposta %}
+    <form method="get">
+        <div class="row">
+            <div class="col-md-12">
+                <select name="questionario">
+                    <option value="">--------</option>
+                    {% for questionario in questionarios %}
+                        <option value="{{ questionario.id }}">{{ questionario }}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
-        <a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_detail' resposta.pk %}">ver
-            resposta</a>
-    </div>
-</div>
-{% empty %}
+        <div class="row">
+            <div class="col-md-12">
+                <select name="setor">
+                    <option value="">--------</option>
+                    {% for setor in setores_censitarios %}
+                        <option value="{{ setor.id }}">{{ setor }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
 
-<div class="row">
-    <div class="col-lg-12">
-        Sem respostas!
-    </div>
-</div>
+        <div class="row">
+            <div class="col-md-12">
+                <input type="submit" value="Filtrar">
+                <a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_list' %}">Limpar</a>
+            </div>
+        </div>
+    </form>
 
-{% endfor %}
+    {% for resposta in object_list %}
+        <div class="row">
+            <div class="col-lg-12">
+                <div><b>Questionario: </b> {{ resposta.questionario }}</div>
+                <div><b>Proposto por: </b> {{ resposta.questionario.usuario }}</div>
+                <div><b>Aplicado no Área: </b> {{ resposta.setor_censitario }}</div>
+                <div><b>Respondido por: </b> {{ resposta.usuario }}</div>
+                <div>
+                    {% include 'core/includes/timed.html' with timed_object=resposta %}
+                </div>
+                <a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_detail' resposta.pk %}">ver
+                    resposta</a>
+            </div>
+        </div>
+        {% empty %}
+
+        <div class="row">
+            <div class="col-lg-12">
+                Sem respostas!
+            </div>
+        </div>
+
+    {% endfor %}
 
 
 {% endblock %}
