--- a/pmsb_web/questionarios/templates/questionarios/respostaquestionario_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/respostaquestionario_detail.html
@@ -1,36 +1,36 @@
 {% extends "questionarios/base.html" %}
 
 {% block conteudo %}
-<div class="row">
-    <div class="col-lg-12">
-        <div><a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_list'%}">Voltar</a></div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div><a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_list' %}">Voltar</a></div>
 
-        <div><b>Grupo: </b> {{object.questionario.grupo}}</div>
-        <div><b>Área: </b> {{object.setor_censitario}}</div>
-        <div><b>Questionario: </b> {{object.questionario}}</div>
-        <div><b>Usuario: </b> {{object.usuario}}</div>
+            <div><b>Grupo: </b> {{ object.questionario.grupo }}</div>
+            <div><b>Área: </b> {{ object.setor_censitario }}</div>
+            <div><b>Questionario: </b> {{ object.questionario }}</div>
+            <div><b>Usuario: </b> {{ object.usuario }}</div>
+            {% include 'core/includes/timed.html' with timed_object=object %}
 
-        {% include 'core/includes/timed.html' with timed_object=object %}
+            <hr>
+            {% for resposta in object.perguntas.all %}
 
-        <hr>
-        {% for resposta in object.perguntas.all %}
+                <div>{% include 'questionarios/includes/pergunta/tipo.html' with pergunta=resposta.pergunta %}</div>
+                <div><b>Pergunta: </b>{{ resposta.pergunta.variavel }}</div>
+                <div><b>Descrição: </b>{{ resposta.pergunta.texto }}</div>
+                {% include 'core/includes/timed.html' with timed_object=resposta %}
+                <div><b>Localização: </b>{{ resposta.localizacao }}</div>
+                <b>Resposta:</b>
+                {% include 'questionarios/includes/resposta/resposta.html' with resposta=resposta %}
+                <hr>
+                {% empty %}
 
-        <div>{% include 'questionarios/includes/pergunta/tipo.html' with pergunta=resposta.pergunta %}</div>
-        <div><b>Pergunta: </b>{{resposta.pergunta.variavel}}</div>
-        <div><b>Descrição: </b>{{resposta.pergunta.texto}}</div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        Sem respostas!
+                    </div>
+                </div>
 
-        <b>Resposta:</b>
-        {% include 'questionarios/includes/resposta/resposta.html' with resposta=resposta %}
-        <hr>
-        {% empty %}
-
-        <div class="row">
-            <div class="col-lg-12">
-                Sem respostas!
-            </div>
+            {% endfor %}
         </div>
-
-        {% endfor %}
     </div>
-</div>
 {% endblock %}
