--- a/pmsb_web/questionarios/templates/questionarios/respostaquestionario_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/respostaquestionario_detail.html
@@ -6,7 +6,7 @@
             <div><a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_list' %}">Voltar</a></div>
 
             <div><b>Grupo: </b> {{ object.questionario.grupo }}</div>
-            <div><b>Área: </b> {{ object.setor_censitario }}</div>
+            <div><b>Aplicado na Área: </b> {{ object.setor_censitario }}</div>
             <div><b>Questionario: </b> {{ object.questionario }}</div>
             <div><b>Usuario: </b> {{ object.usuario }}</div>
             {% include 'core/includes/timed.html' with timed_object=object %}
