--- a/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
+++ b/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
@@ -47,6 +47,7 @@
                 </div>
                 <a class="btn btn-primary" href="{% url 'questionarios:respostaquestionario_detail' resposta.pk %}">ver
                     resposta</a>
+                <a class="btn btn-success" href="{% url 'questionarios:respostaquestionario_csv_detail' resposta.pk %}">csv</a>
             </div>
         </div>
         <hr/>
