--- a/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
+++ b/pmsb_web/questionarios/templates/questionarios/respostaquestionario_list.html
@@ -40,7 +40,7 @@
             <div class="col-lg-12">
                 <div><b>Questionario: </b> {{ resposta.questionario }}</div>
                 <div><b>Proposto por: </b> {{ resposta.questionario.usuario }}</div>
-                <div><b>Aplicado no Área: </b> {{ resposta.setor_censitario }}</div>
+                <div><b>Aplicado na Área: </b> {{ resposta.setor_censitario }}</div>
                 <div><b>Respondido por: </b> {{ resposta.usuario }}</div>
                 <div>
                     {% include 'core/includes/timed.html' with timed_object=resposta %}
